--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -6,6 +6,7 @@ gem 'rails', '3.1.0'
 # gem 'rails',     :git => 'git://github.com/rails/rails.git'
 
 gem 'sqlite3'
+gem 'rails-backbone'
 
 group :assets do
   gem 'sass-rails', "  ~> 3.1.0"
