--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -18,6 +18,7 @@ group :development, :test do
   gem "rspec-rails", "~> 2.6.1"
   gem "ruby-debug19"
   gem 'jasmine', "= 1.1.0.rc4"
+  gem 'jasminerice'
 end
 
 group :test do
