--- a/example_app/spec/javascripts/support/jasmine.yml
+++ b/example_app/spec/javascripts/support/jasmine.yml
@@ -17,6 +17,7 @@ src_files:
   - public/javascripts/dragdrop.js
   - public/javascripts/application.js
   - public/javascripts/**/*.js
+  - app/assets/javascripts/**/*.js
 
 # stylesheets
 #
