--- a/example_app/spec/javascripts/support/jasmine.yml
+++ b/example_app/spec/javascripts/support/jasmine.yml
@@ -11,13 +11,14 @@
 #   - dist/**/*.js
 #
 src_files:
-  - public/javascripts/prototype.js
-  - public/javascripts/effects.js
-  - public/javascripts/controls.js
-  - public/javascripts/dragdrop.js
-  - public/javascripts/application.js
-  - public/javascripts/**/*.js
-  - app/assets/javascripts/**/*.js
+  # uses jasminerice instead
+  # - public/javascripts/prototype.js
+  # - public/javascripts/effects.js
+  # - public/javascripts/controls.js
+  # - public/javascripts/dragdrop.js
+  # - public/javascripts/application.js
+  # - public/javascripts/**/*.js
+  # - app/assets/javascripts/**/*.js
 
 # stylesheets
 #
