--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -7,6 +7,7 @@ gem 'rails-backbone'
 gem 'jquery-rails'
 gem 'ejs'
 gem "flutie", "~> 1.3.2"
+gem "clearance", "~> 0.13.0"
 
 group :assets do
   gem 'sass-rails', "  ~> 3.1.0"
