--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -8,6 +8,7 @@ gem 'jquery-rails'
 gem 'ejs'
 gem "flutie", "~> 1.3.2"
 gem "clearance", "~> 0.13.0"
+gem 'paperclip'
 
 group :assets do
   gem 'sass-rails', "  ~> 3.1.0"
