--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -3,7 +3,7 @@ source 'http://rubygems.org'
 gem 'rails', '3.1.0'
 gem 'sqlite3'
 
-gem 'rails-backbone'
+gem 'rails-backbone', '~> 0.7.0'
 gem 'jquery-rails'
 gem 'ejs'
 gem "flutie", "~> 1.3.2"
@@ -28,7 +28,7 @@ end
 group :test do
   gem 'turn', :require => false
   gem "capybara", "~> 1.1.1"
-  gem "selenium-webdriver", "~> 2.10.0"
+  gem 'selenium-webdriver', '~> 2.18.0'
   gem 'cucumber-rails', "~> 1.0.2"
   gem "factory_girl_rails"
   gem "bourne"
