More Testing content

--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -23,6 +23,7 @@ group :development, :test do
   gem "ruby-debug19"
   gem 'jasmine', "= 1.1.0.rc4"
   gem 'jasminerice'
+  gem 'cucumber-rails', "~> 1.0.2"
 end
 
 group :test do
