Don't require cucumber-rails in bundler; fixes #60
This only affects bundler 1.1 (1.0 was unaffected, but continues to work
with this fix)

More info:
* http://stackoverflow.com/questions/7927669/dirname-cant-convert-nil-into-string-typeerror
* http://groups.google.com/group/cukes/msg/803836e9f6e7f1be?pli=1

I believe the proper fix is to upgrade cucumber-rails.

--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -23,14 +23,13 @@ group :development, :test do
   gem "ruby-debug19"
   gem 'jasmine', "= 1.1.0.rc4"
   gem 'jasminerice'
-  gem 'cucumber-rails', "~> 1.0.2"
+  gem 'cucumber-rails', "~> 1.0.2", :require => false
 end
 
 group :test do
   gem 'turn', :require => false
   gem "capybara", "~> 1.1.1"
   gem 'selenium-webdriver', '~> 2.18.0'
-  gem 'cucumber-rails', "~> 1.0.2"
   gem "factory_girl_rails"
   gem "bourne"
   gem "database_cleaner"
