Remove Jasminerice, use new jasmine-gem
* The jasmine gem can correctly use the Rails asset pipeline now, as per https://groups.google.com/group/jasmine-js/browse_thread/thread/1919f00753d7b8df/2ab88af619f1d819
* Jasminerice previously bundled jasmine-html and jasmine-jquery, so move those into spec/javascripts/support.

--- a/example_app/spec/javascripts/support/jasmine.yml
+++ b/example_app/spec/javascripts/support/jasmine.yml
@@ -11,14 +11,8 @@
 #   - dist/**/*.js
 #
 src_files:
-  # uses jasminerice instead
-  # - public/javascripts/prototype.js
-  # - public/javascripts/effects.js
-  # - public/javascripts/controls.js
-  # - public/javascripts/dragdrop.js
-  # - public/javascripts/application.js
-  # - public/javascripts/**/*.js
-  # - app/assets/javascripts/**/*.js
+  - spec/javascripts/support/*.js
+  - assets/application.js
 
 # stylesheets
 #
