--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -21,8 +21,7 @@ end
 group :development, :test do
   gem "rspec-rails", "~> 2.6.1"
   gem "ruby-debug19"
-  gem 'jasmine', "= 1.1.0.rc4"
-  gem 'jasminerice'
+  gem 'jasmine', :git => "git://github.com/pivotal/jasmine-gem.git", :ref => "34c1529c3f7"
   gem 'cucumber-rails', "~> 1.0.2", :require => false
 end
 
