--- a/example_app/Rakefile
+++ b/example_app/Rakefile
@@ -5,3 +5,5 @@
 require File.expand_path('../config/application', __FILE__)
 
 ExampleApp::Application.load_tasks
+
+task :default => ['spec', 'jasmine:ci', 'cucumber']
