--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -33,7 +33,7 @@ group :test do
   gem "bourne"
   gem "database_cleaner"
   gem "nokogiri"
-  gem "shoulda"
+  gem "shoulda-matchers"
   gem "launchy"
   gem "guard-spork"
   gem "spork", "~> 0.9.0.rc"
