--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -30,7 +30,7 @@ group :test do
   gem 'turn', :require => false
   gem "capybara", "~> 1.1.1"
   gem 'selenium-webdriver', '~> 2.18.0'
-  gem "factory_girl_rails"
+  gem "factory_girl_rails", "~> 3.4.0"
   gem "bourne"
   gem "database_cleaner"
   gem "nokogiri"
