--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -1,7 +1,7 @@
 source 'http://rubygems.org'
 
-gem 'rails', '3.1.0'
-gem 'sqlite3'
+gem 'rails', '3.2.6'
+gem 'sqlite3', '~> 1.3.5'
 
 gem 'rails-backbone', '~> 0.7.0'
 gem 'jquery-rails'
@@ -13,8 +13,8 @@ gem 'rabl'
 gem 'backbone-support'
 
 group :assets do
-  gem 'sass-rails', "  ~> 3.1.0"
-  gem 'coffee-rails', "~> 3.1.0"
+  gem "sass-rails", "~> 3.2.0"
+  gem 'coffee-rails', "~> 3.2.0"
   gem 'uglifier'
 end
 
