--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -10,7 +10,7 @@ gem "flutie", "~> 1.3.2"
 gem "clearance", "~> 0.13.0"
 gem 'paperclip'
 gem 'rabl'
-gem 'backbone-support'
+gem 'backbone-support', :path => "~/dev/backbone-support"
 
 group :assets do
   gem "sass-rails", "~> 3.2.0"
