--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -29,7 +29,7 @@ end
 group :test do
   gem 'turn', :require => false
   gem "capybara", "~> 1.1.1"
-  gem 'selenium-webdriver', '~> 2.18.0'
+  gem "capybara-webkit", "0.12.1"
   gem "factory_girl_rails", "~> 3.4.0"
   gem "bourne"
   gem "database_cleaner"
