Update js dependencies to move to Backbone 1.0
- Switch to backbone-on-rails gem
- latest jquery-rails gem
- latest visualsearch script
- fix tests broken by updating to backbone 1.0

--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -3,7 +3,7 @@ source 'http://rubygems.org'
 gem 'rails', '3.2.8'
 gem 'sqlite3', '~> 1.3.5'
 
-gem 'rails-backbone', '~> 0.7.0'
+gem 'backbone-on-rails', '1.0.0'
 gem 'jquery-rails'
 gem 'ejs'
 gem "flutie", "~> 1.3.2"
@@ -20,7 +20,7 @@ end
 
 group :development, :test do
   gem "rspec-rails", "~> 2.9.0"
-  gem "ruby-debug19"
+  gem "debugger"
   gem 'jasmine', :git => "git://github.com/pivotal/jasmine-gem.git", 
                  :ref => "34c1529c3f7"
   gem 'cucumber-rails', "~> 1.0.2", :require => false
@@ -29,6 +29,7 @@ end
 group :test do
   gem 'turn', :require => false
   gem "capybara", "~> 1.1.1"
+  gem "selenium-webdriver", "~> 2.31.0"
   gem "capybara-webkit", "0.12.1"
   gem "factory_girl_rails", "~> 3.4.0"
   gem "bourne"
