--- a/example_app/Gemfile
+++ b/example_app/Gemfile
@@ -1,6 +1,6 @@
 source 'http://rubygems.org'
 
-gem 'rails', '3.2.8'
+gem 'rails', '3.2.13'
 gem 'sqlite3', '~> 1.3.5'
 
 gem 'backbone-on-rails', '1.0.0'
@@ -19,19 +19,18 @@ group :assets do
 end
 
 group :development, :test do
-  gem "rspec-rails", "~> 2.9.0"
+  gem "rspec-rails", "~> 2.13.0"
   gem "debugger"
-  gem 'jasmine', :git => "git://github.com/pivotal/jasmine-gem.git", 
-                 :ref => "34c1529c3f7"
-  gem 'cucumber-rails', "~> 1.0.2", :require => false
+  gem "jasmine", "~> 1.3.2"
+  gem 'cucumber-rails', "~> 1.3.1", :require => false
 end
 
 group :test do
   gem 'turn', :require => false
-  gem "capybara", "~> 1.1.1"
+  gem "capybara", "~> 2.1.0"
   gem "selenium-webdriver", "~> 2.31.0"
-  gem "capybara-webkit", "0.12.1"
-  gem "factory_girl_rails", "~> 3.4.0"
+  gem "capybara-webkit", "~> 0.14.2"
+  gem "factory_girl_rails", "~> 4.2.1"
   gem "bourne"
   gem "database_cleaner"
   gem "nokogiri"
